<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/textColorPrimary"
    android:tag="LOL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/dialog_min_height"
    android:minWidth="@dimen/dialog_min_width">

    <TabHost android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.0">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TabWidget android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:background="@color/colorSecondaryDark"
                android:layout_height="wrap_content" />

            <FrameLayout android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout android:id="@+id/encode_dialog_text_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText android:id="@+id/encode_dialog_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="top|start"
                        android:textColor="@color/colorPrimaryDark"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:layout_weight=".82"
                        android:textSize="@dimen/secret_text_size"
                        android:hint="@string/edit_text_encode_hint" />

                    <LinearLayout android:id="@+id/encode_dialog_btn_tab"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <Button android:textColor="@color/textColorPrimary"
                            android:id="@+id/cancel_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/cancel_button_text" />

                        <Button android:textColor="@color/textColorPrimary"
                            android:id="@+id/ok_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/ok_button_text" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout android:id="@+id/encode_dialog_browse_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button android:textColor="@color/textColorPrimary"
                            android:id="@+id/browse_file_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_open_text_file"
                            android:text="@string/btn_browse" />

                    </LinearLayout>

                    <TextView android:gravity="start"
                        android:id="@+id/text_preview"
                        android:layout_width="match_parent"
                        android:layout_height="0sp"
                        android:layout_weight="0.60"
                        android:padding="@dimen/dialog_decode_text_padding"
                        android:scrollbars="vertical"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/secret_text_size"
                        android:text="@string/encode_text_preview"
                        android:background="@drawable/layout_border"/>

                    <LinearLayout android:id="@+id/encode_dialog_btn_tab2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <Button android:textColor="@color/textColorPrimary"
                            android:id="@+id/cancel_button2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/cancel_button_text" />

                        <Button android:textColor="@color/textColorPrimary"
                            android:id="@+id/ok_button2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/ok_button_text" />
                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>